--- a/week_1/Day_3/Core/FLEX-ible Columns/style.css
+++ b/week_1/Day_3/Core/FLEX-ible Columns/style.css
@@ -20,3 +20,9 @@
     margin: 10px;
     background-color: #659DA1;
 }
+.col-4{
+    flex :4;
+    padding: 10px;
+    margin: 10px;
+    background-color: #659DA1;
+}
