--- a/week_1/Day_4/Core/Profile-Page/style.css
+++ b/week_1/Day_4/Core/Profile-Page/style.css
@@ -24,9 +24,10 @@
 
 }
 .pre{
-    width: 300px;
+    width: 410px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
 }
 .pre a{
     text-decoration: none;
@@ -46,9 +47,11 @@
     padding: 20px 200px 0px 200px;
     display: flex;
     justify-content: space-between;
+    gap: 50px;
 }
 .one{
     height: 550px;
+    width: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -59,7 +62,6 @@
     margin-bottom: 20px;
 }
 .bar{
-    width: 400px;
     height: 100px;
     background-color: #17A2B8;
     border: 2px solid #DDDDDD ;
@@ -94,7 +96,6 @@
     flex-direction: column;
 }
 .bar1{
-    width: 380px;
     height: 50px;
     background-color: #333333;
     border: 2px solid #DDDDDD ;
@@ -131,7 +132,6 @@
     flex-direction: column;
     justify-content: space-between;
 }
-
 .bar2{
     width: 200px;
     height: 50px;
